# VuklanSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: embed_resource.py
res/shaders/: debug.frag  debug.frag.spv  debug.vert  debug.vert.spv  default.frag  default.frag.spv  default.vert  default.vert.spv  instance.frag  instance.vert  instance.vert.spv  particles.comp  post_processing.frag  post_processing.vert  random.glsl  textured_lit.frag  textured_lit.frag.spv  textured_lit.vert  textured_mesh.frag  textured_mesh.frag.spv  textured_mesh.vert.spv  triangle.frag  triangle.vert
src/: application.cpp  application.h  atl_vk_utils.cpp  atl_vk_utils.h  buffer.cpp  buffer.h  camera.cpp  camera.h  descriptor.cpp  descriptor.h  event.h  imgui_layer.cpp  imgui_layer.h  imgui_theme.cpp  imgui_theme.h  logger.cpp  logger.h  main.cpp  orthographic_camera.cpp  orthographic_camera.h  pch.h  perspective_camera.cpp  perspective_camera.h  render_api.cpp  render_api.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  textured_lit.frag  utils.h  vk_buffer.cpp  vk_buffer.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_framebuffer.cpp  (+21 more)
